force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>