force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CompletedDate__c</fullName>
    <description>Process finish date</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>