force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__JobItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__JobItemsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Processed Batches</description>
    <label>Job Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>