force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__MethodName__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__MethodName__c</fullName>
    <description>Name of Function that executed</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>