force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__NumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NumberOfErrors__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of failed Apex processes</description>
    <label>Number Of Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>