force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__NumberOfWarnings__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NumberOfWarnings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of error messages</description>
    <label>Number of Warnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>