force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__Started_From__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Started_From__c</fullName>
    <description>From where did the job start: could be a class, visualforce page, or a schedule, etc...</description>
    <label>Started From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>