force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_Detail__c</fullName>
    <label>Status Detail</label>
    <type>TextArea</type>
</CustomField>