force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__StatusFlag__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__StatusFlag__c</fullName>
    <formula>IF(Negoptim__NumberOfErrors__c  = 0 &amp;&amp; Negoptim__NumberOfWarnings__c = 0, IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Successful&apos;),
	IF(Negoptim__NumberOfErrors__c  &gt; 0 &amp;&amp; Negoptim__NumberOfErrors__c =  Negoptim__TotalJobItems__c , IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Failed&apos;),
     IF((Negoptim__NumberOfErrors__c  &gt; 0 &amp;&amp; Negoptim__NumberOfErrors__c &lt;  Negoptim__TotalJobItems__c) || Negoptim__NumberOfWarnings__c &gt; 0 , IMAGE(&apos;/img/msg_icons/warning16.png&apos;, &apos;Warning&apos;), null)
	)
)</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>