force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Submitted_Date__c</fullName>
    <description>Process start date</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>