force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__TotalJobItems__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TotalJobItems__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of all executed prcesses</description>
    <label>Total job items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>