force-app/main/default/objects/Negoptim__Log__c/fields/Negoptim__TraceLog__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TraceLog__c</fullName>
    <description>Process trace log</description>
    <label>Trace Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>