force-app/main/default/objects/Negoptim__Log__c/listViews/Negoptim__All.listView-meta.xml
<ListView>
    <fullName>Negoptim__All</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Class_Name__c</columns>
    <columns>Negoptim__JobType__c</columns>
    <columns>Negoptim__MethodName__c</columns>
    <columns>Negoptim__TotalJobItems__c</columns>
    <columns>Negoptim__JobItemsProcessed__c</columns>
    <columns>Negoptim__NumberOfErrors__c</columns>
    <columns>Negoptim__NumberOfWarnings__c</columns>
    <columns>Negoptim__Submitted_Date__c</columns>
    <columns>Negoptim__CompletedDate__c</columns>
    <columns>Negoptim__StatusFlag__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>